--- a/submit.html
+++ b/submit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted) {}"></iframe>
 <head>
 
     <meta charset='utf-8'>
@@ -134,7 +134,9 @@
 				<hr /><br>
 
       <button type="submit" class="btn btn-primary btn-lg btn-block">등재 신청</button>
-	</form>
+	</form><br>
+    <a class="btn btn-outline-danger btn-lg btn-block" src="https://gmdquackforum.site/">꿱포럼으로 돌아가기</a>
   </div>
+  
 				
 </article>
