--- a/submit.html
+++ b/submit.html
@@ -135,7 +135,7 @@
 
       <button type="submit" class="btn btn-primary btn-lg btn-block">등재 신청</button>
 	</form><br>
-    <a class="btn btn-outline-danger btn-lg btn-block" src="https://gmdquackforum.site/">꿱포럼으로 돌아가기</a>
+    <button class="btn btn-outline-danger btn-lg btn-block" onClick="location.href='https://gmdquackforum.site/'">꿱포럼으로 돌아가기</button>
   </div>
   
 				
