--- a/submit.html
+++ b/submit.html
@@ -68,7 +68,7 @@
 			</p>
 			<div>
 				<div style="float: left; width: 50%;">
-						<input class="form-control" type="text" id="text" name="entry.1008342851" placeholder=" 레벨 선택 ">
+						<input class="form-control" type="text" id="text" name="entry.1008342851" placeholder=" 레벨 선택 " readonly>
 				</div>
 				<div style="float: left; width:50%;">
 						<select class="choice1" name="choice" style="height:35px; width:100%;">
@@ -110,7 +110,7 @@
 				<input class="form-control" type="text" id="fps" name="entry.1626120345" placeholder="120fps" required>
 			</div>
 			<div style="float: left; width: 33%;">
-				<input class="form-control" type="text3" id="text3" name="entry.28059318" placeholder="BYPASS or CBF" required>
+				<input class="form-control" type="text3" id="text3" name="entry.28059318" placeholder="BYPASS or CBF" required readonly>
 			</div>
 				<div style="float: left; width:50%;">
 						<select class="choice2" name="choice2" style="height:35px; width:100%;">
