--- a/submit.html
+++ b/submit.html
@@ -104,7 +104,7 @@
 			<br>
 			<div>
 			<div style="float: left; width: 33%;">
-				<input class="form-control" type="text" id="device" name="entry.1044707064" placeholder="pc/mobile" required>
+				<input class="form-control" type="text4" id="text4" name="entry.1044707064" placeholder="pc/mobile" readonly>
 			</div>
 			<div style="float: left; width: 33%;">
 				<input class="form-control" type="text" id="fps" name="entry.1626120345" placeholder="120fps" required>
@@ -112,6 +112,21 @@
 			<div style="float: left; width: 33%;">
 				<input class="form-control" type="text3" id="text3" name="entry.28059318" placeholder="BYPASS or CBF" required readonly>
 			</div>
+			<div style="float: left; width:50%;">
+				<select class="choice3" name="choice3" style="height:35px; width:100%;">
+								  <option>선택해주세요</option>
+								  <option value="PC">PC</option>
+								  <option value="MOBILE">MOBILE</option>
+			</select>
+		<script>
+	  const choice3 = document.querySelector(".choice3");
+
+	  choice3.addEventListener("change", function (e) {
+			const text4 = document.querySelector("#text4");
+			text4.value = `${e.target.value}`;
+		});
+		</script>
+		</div>
 				<div style="float: left; width:50%;">
 						<select class="choice2" name="choice2" style="height:35px; width:100%;">
       									<option>-선택안함-</option>
@@ -127,6 +142,11 @@
     			});
     	</script>
 				</div>
+
+
+
+			
+				
 				</div>
 				<p/><br>
 			</div>
